# FuzzyTaxoSearch

./: .gitignore  Cargo.toml  LICENSE.md  README.md
client/: Cargo.toml
client/src/: client_test.rs  main.rs
src/: engine.rs  io.rs  main.rs
src/routes/: exact_match.rs  fuzzy_autocomplete.rs  fuzzy_match.rs  mod.rs
