[package]
name = "FuzzyTaxoSearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "client"
]

[dev-dependencies]
axum-macros = "0.4.1"

[dependencies]
nucleo-matcher = "0.3.1"
nucleo = "0.5.0"

deadpool = "0.12.1"

time = "0.3.36"
uuid = {version = "1.10.0", features = ["v4"]}

axum = "0.7.5"
tokio = { version =  "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.12.2"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"

clap = { version = "4.5.8", features = ["derive"] }
