[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
nucleo-matcher = "0.3.1"
nucleo = "0.5.0"

clap = { version = "4.5.8", features = ["derive"] }

inquire = "0.7.5"

reqwest = { version = "0.12.5", features = ["blocking", "json", "cookies"] }
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
